Lack of tests was driving me crazy

--- a/.jshintrc
+++ b/.jshintrc
@@ -17,5 +17,11 @@
     "strict": true,
     "trailing": true,
     "smarttabs": true,
-    "eqnull": true
+    "eqnull": true,
+
+    "globals": {
+        "module": true,
+        "test": true,
+        "strictEqual": true
+    }
 }
